Add lfx header and footer
Signed-off-by: Efren Lim <elim@linuxfoundation.org>

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,6 @@
     <lfx-header-v2 id="lfx-header"></lfx-header-v2>
     <app-root></app-root>
     <!-- LFx Footer -->
-    <!-- <lfx-footer></lfx-footer> -->
+    <lfx-footer></lfx-footer>
   </body>
 </html>
